force-app/main/default/objects/KimbleOne__ChangeOrder__c/KimbleOne__ChangeOrder__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Change Order</label>
    <nameField>
        <label>Change Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>