force-app/main/default/objects/KimbleOne__ChangeOrder__c/fields/KimbleOne__Approver2User__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver2User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChangeOrdersApprover2Use</relationshipName>
    <type>Lookup</type>
</CustomField>