force-app/main/default/objects/KimbleOne__ChangeOrder__c/fields/KimbleOne__ChangeOrderBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ChangeOrderBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Accepted By</label>
    <referenceTo>KimbleOne__ChangeOrderBehaviourRule__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>ChangeOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>