force-app/main/default/objects/KimbleOne__ChangeOrder__c/fields/KimbleOne__ShortName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShortName__c</fullName>
    <label>Short Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>